# xash3d-maintui

./: .gitignore  Cargo.toml  README.md  wscript
.github/workflows/: ci.yaml
data/: maintui_LANG_all.txt  maintui_LANG_stripped.txt
tools/: Cargo.toml  i18n-skeleton.rs  update-i18n-skeletons.sh
xash3d-maintui/: Cargo.toml
xash3d-maintui/src/: config_list.rs  export.rs  i18n.rs  input.rs  lib.rs  logger.rs  menu.rs  prelude.rs  saved_servers.rs  server_info.rs  strings.rs  ui.rs  widgets.rs
xash3d-maintui/src/config_list/: back_button.rs  backend.rs  button.rs  entry.rs  label.rs
xash3d-maintui/src/menu/: browser.rs  change_game.rs  config.rs  create_server.rs  main.rs  saves.rs  test.rs
xash3d-maintui/src/menu/config/: audio.rs  game.rs  gamepad.rs  keyboard.rs  mouse.rs  multiplayer.rs  network.rs  touch_buttons.rs  video.rs  voice.rs
xash3d-maintui/src/ui/: screen.rs  sound.rs  state.rs  symbols.rs  utils.rs
xash3d-maintui/src/widgets/: button.rs  checkbox.rs  image.rs  input.rs  input_popup.rs  list.rs  list_popup.rs  password_popup.rs  popup.rs  scrollbar.rs  slider.rs  table.rs
xash3d-ratatui/: Cargo.toml
xash3d-ratatui/src/: backend.rs  bmp.rs  font.rs  lib.rs  terminal.rs
