[workspace]
resolver = "2"
members = [
    "xash3d-maintui",
    "xash3d-ratatui",
]
exclude = [
    "tools",
]

[workspace.package]
license = "LGPL-3.0-only"
authors = ["Denis Drakhnia <numas13@gmail.com>"]
edition = "2024"
rust-version = "1.86"

[workspace.dependencies]
log = "0.4"
bitflags = "2.6"
libc = "0.2"
hashbrown = "0.15"
ratatui = { version = "0.29", default-features = false, features = ["unstable-widget-ref"] }
csz = { version = "0.3.0", features = ["alloc"] }
res = { git = "https://github.com/numas13/xash3d-sdk.git", package = "xash3d-hl-resources" }
xash3d-ui = { git = "https://github.com/numas13/xash3d-sdk.git", features = ["std"] }

[profile.release]
panic = "abort"
strip = "debuginfo"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
