[package]
name = "xash3d-maintui"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "menu"
crate-type = ["cdylib"]

[features]
bundled = ["xash3d-ratatui/bundled"]

[dependencies]
bitflags.workspace = true
libc.workspace = true
log.workspace = true
csz.workspace = true
ratatui.workspace = true
res.workspace = true
xash3d-protocol = "0.2"
xash3d-cell.workspace = true
xash3d-utils.workspace = true
xash3d-shared.workspace = true
xash3d-ui.workspace = true
xash3d-ratatui = { version = "0.1.0", path = "../xash3d-ratatui" }
unicode-width = "0.2"
compact_str = "0.8"
