[package]
name = "xash3d-ratatui"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
bundled = []

[dependencies]
libc.workspace = true
log.workspace = true
ratatui.workspace = true
xash3d-ui.workspace = true
ab_glyph = "0.2.29"
