[package]
name = "xash3d-ratatui"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
std = []
bundled = []

[dependencies]
libc.workspace = true
log.workspace = true
ratatui.workspace = true
xash3d-ui.workspace = true
ab_glyph = { version = "0.2.29", default-features = false, features = ["libm"] }
